--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.26.0",
+    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-webpack-plugin": "^1.4.4",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vue": "^2.1.10",
+    "vue-hot-reload-api": "^2.0.8",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.10",
     "vuex": "^2.1.1",
